スクレイピング対応しました！！！

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,14 @@ read.jpg
 python.jpg
 python.png
 old-katsu.py
+study_bs4.py
+study_bs4.py
+key.py.txt
+test.jpg.xxx
 payload.xxx
 test.jpg.xxx
 kakakaya.py
+test.py
 x.c
 xyz.c
 a.out
