--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 pyzbar==0.1.8
-opencv_contrib_python==4.1.2.30
+discord.py==1.3.1
 requests==2.22.0
 beautifulsoup4==4.8.2
-path.py==12.4.0
+discord==1.0.1
 Pillow==7.0.0
-slackclient==2.5.0
