--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pyzbar==0.1.8
-discord.py==1.3.1
-requests==2.22.0
-beautifulsoup4==4.8.2
-discord==1.0.1
-Pillow==7.0.0
+pyzbar
+discord.py
+requests
+beautifulsoup4
+discord
+Pillow
